--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <button type="button " class="btn btn-outline-light btn-lg download-btn"> <i class="fa-brands fa-google-play"></i> Download</button>
       </div>
       <div class="col-lg-6  ">
-       <img class="rotate" src="images/iphone6.png"  " alt="iphone-mockup">
+       <img class="rotate" src="iphone6.png"  " alt="iphone-mockup">
       </div>
 
     </div>
